# toyml

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: build_docs.yml  lint.yml  publish.yml  release.yml  test.yml
CHANGELOG/: index.html
abbreviations/: index.html
algorithms/classification/knn/: index.html
algorithms/classification/naive_bayes/: index.html
algorithms/clustering/agnes/: index.html
algorithms/clustering/dbscan/: index.html
algorithms/clustering/diana/: index.html
algorithms/clustering/kmeans/: index.html
algorithms/ensemble/adaboost/: index.html
algorithms/ensemble/iforest/: index.html
algorithms/evt/spot/: index.html
changelog/: index.html
docs/: CHANGELOG.md  abbreviations.md  index.md  references.bib
docs/algorithm/evt/: spot.md
docs/algorithms/classification/: knn.md  naive_bayes.md
docs/algorithms/clustering/: agnes.md  dbscan.md  diana.md  kmeans.md
docs/algorithms/ensemble/: adaboost.md  iforest.md
docs/api/clustering/: diana.md
docs/user-guide/: 1-read-first.md
myml/: __init__.py
myml/Association-Analysis/Apriori/: Python-Apriori-mlxtend.ipynb  R-Apriori-arules.ipynb
myml/Association-Analysis/Relim/: Python-Relim-pymining.ipynb
myml/Classification/DecisionTree/: Python-CART-FromZero.ipynb  Python-CART-sklearn.ipynb  Python-ID3.ipynb  R-C4.5-RWeka.ipynb  R-C5.0-C50.ipynb  R-CART-rpart.ipynb
myml/Classification/DecisionTree/Python-CART-FromZero/: regTrees.py
myml/Classification/DecisionTree/Python-ID3-FromZero/: treePlotter.py  trees.py
myml/Classification/KNN/: KNN-From-Zero.py  KNN.py  Python-KNN-sklearn.ipynb  R-KNN-meanShiftR.ipynb  __init__.py
myml/Classification/NaiveBayes/: NaiveBayes.py  Python-sklearn.ipynb  R-e1071.ipynb
myml/Classification/SVM/: Python-SVM-sklearn.ipynb  R-SVM-e1071.ipynb
myml/Clustering/DBSCAN/: DbScan.py  Python-DBSCAN-Sklearn.ipynb  R-DBSCAN-fpc&dbscan.ipynb
myml/Clustering/Hierarchical/: Agnes.py  Diana.py  Python-Hierarchical-Scipy&Sklearn.ipynb  R-Hierarchical Clustering-stat&cluster.ipynb  __init__.py
myml/Clustering/Kmeans/: KmeansClustering.py  Python-Kmeans-sklearn.ipynb  R-Kmeans-stat.ipynb  __init__.py
myml/Ensemble/: Python-Ensemble-sklearn.ipynb
myml/Ensemble/Boosting/: AdaBoost.py  __init__.py
myml/utils/: types.py
quickstart/: index.html
scripts/: run-pytest.sh
scripts/lint/: run-flake8.sh  run-pylint.sh
search/: search_index.json
tests/: conftest.py  demo.py
tests/classification/: test_knn.py  test_naive_bayes.py
tests/classification/naive_bayes/: test_categorical_naive_bayes.py  test_gaussian_naive_bayes.py  test_multinomial_naive_bayes.py
tests/clustering/: test_agnes.py  test_bisect_kmeans.py  test_dbscan.py  test_kmeans.py
tests/ensemble/: test_adaboost.py  test_iforest.py
toyml/: __init__.py  exception.py
toyml/classification/: __init__.py  knn.py  naive_bayes.py  naivebayes.py
toyml/classification/knn/: __init__.py  knn.py
toyml/classification/naive_bayes/: __init__.py  categorical_naive_bayes.py  gaussian_naive_bayes.py  multinomial_naive_bayes.py
toyml/classification/naivebayes/: naivebayes.py
toyml/clustering/: __init__.py  agnes.py  bisect_kmeans.py  dbscan.py  diana.py  kmeans.py  kmeans_clustering.py
toyml/clustering/dbscan/: dbscan.py
toyml/clustering/hierarchical/: __init__.py  agnes.py  diana.py
toyml/clustering/kmeans/: __init__.py  bisect.py  bisecting.py  kmeans_clustering.py  plus.py  simple.py
toyml/ensemble/: __init__.py  ada_boost.py  adaboost.py  iforest.py
toyml/ensemble/boosting/: __init__.py  ada_boost.py
toyml/types/: vector.py
toyml/utils/: __init__.py  linear_algebra.py  types.py
user-guide/1-read-first/: index.html
